Fixes layout issues and adds conditional "super success" CSS class

--- a/sailr-web/public/css/custom.css
+++ b/sailr-web/public/css/custom.css
@@ -444,9 +444,11 @@ input[type="file"] {
     vertical-align: middle;
 }
 
+/*
 .btn-big:hover:after {
     content: ' Do it!';
 }
+*/
 
 .btn-long {
     padding-left: 60px;
@@ -641,4 +643,25 @@ animate.slide-show.slide-show-active {
     -moz-transition:    all 0.2s ease;
     -ms-transition:     all 0.2s ease;
     -o-transition:      all 0.2s ease;
+}
+
+.form-control {
+    max-width: 100%
+}
+
+
+
+.stripe-form-badge img {
+    margin-bottom: 10px;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+input.success {
+    border-color: #50cc6e !important;
+    border-width: 2px;
+    -webkit-box-shadow: inset 0 4px 4px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 4px 4px rgba(0, 0, 0, .075);
 }
